--- a/english-assistent-frontend/src/Components/Common/Header/Logo.css
+++ b/english-assistent-frontend/src/Components/Common/Header/Logo.css
@@ -6,6 +6,8 @@
     height: 55px;
     cursor: pointer;
     transition: transform 1s ease;
+    margin-left: 7px;
+    margin-right: 3px;
 }
 
 .image {
